--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+#Spring Boot 2.1 ?? bean definition overriding ?? ?? ?: false (default)
+#Consider renaming one of the beans of enabling overriding by setting
+spring.main.allow-bean-definition-overriding=false
